# docs-example

./: .buildinfo  .gitmodules  CMakeLists.txt  genindex.html  index.html  lib.html  objects.inv  search.html  searchindex.js  standardese.ini
.doctrees/: environment.pickle  index.doctree  lib.doctree
.github/workflows/: main.yml
_sources/: index.rst.txt  lib.rst.txt
docs/: conf.py  index.md
src/: lib.hpp
